--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <link rel="icon" type="image/svg+xml" href="src/assets/ZENITH - LOGO LIGHT.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="/src/index.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.21/dist/katex.min.css"
+    integrity="sha384-zh0CIslj+VczCZtlzBcjt5ppRcsAmDnRem7ESsYwWwg3m/OaJ2l4x7YBZl9Kxxib" crossorigin="anonymous">
   <title>Zenith</title>
 </head>
 
